--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -63,3 +63,10 @@ articulo.inventario=Inventario Total
 articulo.totalArticulos=Total de Art\u00edculos
 
 categoria.totalCategorias=Total de Categorias
+
+login.username=User
+login.password=Password
+login.login=Login
+
+e403.titulo=Access denied
+e403.texto=Have no right
